# exnest-ai-sdk-py

./: .gitignore  LICENSE  MANIFEST.in  README.md  example_usage.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: ci.yml  release.yml
exnestai/: __init__.py  _version.py  client.py  examples.py  models.py  wrapper.py
scripts/: README.md  git-workflow.sh
tests/: README.md  conftest.py  test_ebc.py  test_example_usage.py  test_exnestai.py
