[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "exnestai/_version.py"

[project]
name = "exnestai"
dynamic = ["version"]
# Version is managed by setuptools-scm
description = "Python SDK for ExnestAI API service"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Fazza Abiyyu", email = "fazza_abiyyu@qq.com"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.8"
dependencies = [
    "httpx>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0",
    "flake8>=4.0",
]

[project.urls]
Homepage = "https://github.com/fazza-abiyyu/exnest-ai-sdk-py"
Repository = "https://github.com/fazza-abiyyu/exnest-ai-sdk-py"
"Bug Tracker" = "https://github.com/fazza-abiyyu/exnest-ai-sdk-py/issues"